--- a/slides/05-supervised-tree-slides.qmd
+++ b/slides/05-supervised-tree-slides.qmd
@@ -1,6 +1,6 @@
 --- 
 title: "Supervisée"
-subtitle: "Arbres"
+subtitle: "Arbres de décision"
 author: "Steven Golovkine"
 lang: fr
 date: today
@@ -18,205 +18,318 @@ format:
 --- 
 
 
-# Arbres de décision (CART)
+## Plan
 
-## Introduction
+<br>
 
-::: {.incremental}
-- **CART**: Classification And Regression Trees
-- **Méthode d'apprentissage supervisée**
-- **Classification**: Prédire l'appartenance à l'un des $K$ groupes
-- **Régression**: Prédire une variable numérique continue $Y$
-- **Variables**: $X_1, \ldots, X_p$ avec $n$ observations dans $\mathbb{R}^p$
-:::
+1. La théorie des arbres de décision
+
+2. Les arbres en pratique
+
+3. Exemple
+
+
+## CART
+
+<br>
+
+Variables : $X_1, \ldots, X_p$ avec $n$ observations dans $\mathbb{R}^p$.
+
+. . .
+
+<br>
+
+Classification : Prédire l'appartenance à l'un des $K$ groupes.
+
+. . .
+
+<br>
+
+Régression : Prédire une variable numérique continue $Y$.
+
+
+
 
 ## Objectif principal
 
-::: {.fragment}
-**Partitionner l'espace des observations** $\mathbb{R}^p$ en sous-ensembles homogènes
-:::
+<br>
 
-::: {.fragment}
-**Algorithme récursif de découpage binaire**
-1. Découper selon une variable $X_j$ à un seuil $s$
-2. Créer des sous-régions rectangulaires (hyper-rectangles)
-3. Chaque sous-ensemble = une **feuille** avec une prédiction
-:::
+Partitionner l'espace des observations $\mathbb{R}^p$ en sous-ensembles homogènes.
 
-::: {.fragment}
-**Prédiction par feuille**
-- **Classification**: Classe majoritaire
-- **Régression**: Moyenne des $Y$
-:::
 
-## Principe de l'algorithme
+
+## Algorithme récursif de découpage binaire
+
+<br>
+
+Découper selon une variable $X_j$ à un seuil $s$.
+
+. . .
+
+<br>
+
+Créer des sous-régions rectangulaires (hyper-rectangles).
+
+. . .
+
+<br>
+
+Chaque sous-ensemble = une feuille avec une prédiction.
+
+. . .
+
+<br>
+
+
+⚠️ Algorithme glouton: Optimisation locale, pas globale !
+
+
+## Prédiction par feuille
+
+<br>
+
+Classification : Classe majoritaire
+
+. . .
+
+<br>
+
+Régression : Moyenne des $Y$
+
+
+## Algorithme
+
+<br>
+
+Point de départ: L'ensemble complet des observations
+
+. . .
+
+Pour chaque nœud:
 
 ::: {.incremental}
-1. **Découpage** selon $X_j \leq s$ vs $X_j > s$
-2. **Choix optimal** de $(X_j, s)$ maximisant le **critère d'homogénéité**
-3. **Répétition** jusqu'au **critère d'arrêt**
-4. **Prédiction unique** par feuille pour toutes les observations
+1. Évaluer tous les couples $(X_j, s)$ possibles.
+
+2. Calculer la réduction du critère d'homogénéité.
+
+3. Sélectionner le couple $(X_j, s)$ qui maximise le gain.
+
+4. Diviser le nœud selon $X_j \leq s$ vs $X_j > s$.
+
+5. Répéter jusqu'au critère d'arrêt.
 :::
 
-::: {.fragment}
-⚠️ **Algorithme glouton**: Optimisation locale, pas globale !
-:::
 
-## Algorithme détaillé
 
-::: {.fragment}
-**Pour chaque nœud:**
-:::
+## Critères d'homogénéité
 
-::: {.incremental}
-1. **Évaluer** tous les couples $(X_j, s)$ possibles
-2. **Calculer** la réduction du critère d'homogénéité
-3. **Sélectionner** le couple qui maximise le gain
-4. **Diviser** le nœud selon $X_j \leq s$ vs $X_j > s$
-5. **Répéter** jusqu'aux critères d'arrêt
-:::
+<br>
 
-::: {.fragment}
-**Point de départ**: L'ensemble complet des observations
-:::
+Soit $\widehat{p}_{jk}$ la proportion d'observations de la région $R_j$ appartenant à la classe $k$.
 
-## Critères d'homogénéité - Classification
+. . .
 
-Soit $\widehat{p}_{jk}$ la proportion d'observations de la région $R_j$ appartenant à la classe $k$
+<br>
 
-::: {.fragment}
-**1. Taux d'erreur de classification**
+Taux d'erreur de classification
+
 $$E_j = 1 - \max_k \widehat{p}_{jk}$$
-- Facile à interpréter
-- Peu sensible → rarement utilisé pour la construction
-:::
 
-## Critères d'homogénéité (suite)
+. . .
 
-::: {.fragment}
-**2. Indice de Gini** (le plus utilisé)
+Facile à interpréter.
+
+Peu sensible → rarement utilisé pour la construction.
+
+
+
+## Critères d'homogénéité
+
+<br>
+
+Soit $\widehat{p}_{jk}$ la proportion d'observations de la région $R_j$ appartenant à la classe $k$.
+
+<br>
+
+Indice de Gini (le plus utilisé)
+
 $$G_j = \sum_{k=1}^{K} \widehat{p}_{jk}(1 - \widehat{p}_{jk})$$
-- Minimal ($= 0$) quand homogénéité parfaite
-- On cherche un indice faible
-:::
 
-::: {.fragment}
-**3. Entropie croisée** (théorie de l'information)
+. . .
+
+Minimal ($= 0$) quand homogénéité parfaite.
+
+On cherche un indice faible.
+
+
+## Critères d'homogénéité
+
+
+<br>
+
+Soit $\widehat{p}_{jk}$ la proportion d'observations de la région $R_j$ appartenant à la classe $k$.
+
+<br>
+
+Entropie croisée (théorie de l'information)
+
 $$D_j = -\sum_{k=1}^{K} \widehat{p}_{jk} \log(\widehat{p}_{jk})$$
-- Basé sur Shannon
-- Minimal pour classe parfaitement prédite
-:::
+
+. . .
+
+Basé sur l'information de Shannon.
+
+Minimal pour classe parfaitement prédite.
+
 
 ## Gain d'information
 
-::: {.fragment}
-**Mesure de l'amélioration** après division
-:::
+<br>
 
-::: {.fragment}
-**Exemple avec l'indice de Gini:**
+Mesure de la réduction de l'hétérogénéité après division.
+
+. . .
+
+Objectif : Maximiser le gain d'information.
+
+. . .
+
+Exemple avec l'indice de Gini:
+
 $$\Delta G = G_{\text{avant}} - \left(\frac{n_1}{n} G_1 + \frac{n_2}{n} G_2\right)$$
 
 où:
+
 - $n_1, n_2$ : nombres d'observations dans les sous-ensembles
+
 - $n = n_1 + n_2$
-:::
 
-::: {.fragment}
-**Objectif**: Maximiser le gain d'information
-:::
 
-## Problème du sur-ajustement
+## Problème de l'ajustement
 
-::: {.fragment}
-**Dilemme**
-- **Arbre trop profond** → Sur-ajustement aux données d'apprentissage
-- **Arbre trop simple** → Sous-ajustement, classification trop simpliste
-:::
+<br>
 
-::: {.fragment}
-**Conséquence**
-Perte de capacité de généralisation à de nouvelles données
-:::
+Dilemme: 
 
-::: {.fragment}
-**Solution**: Élagage (*pruning*)
-:::
+- Arbre trop profond → Sur-ajustement aux données d'apprentissage
+
+- Arbre trop simple → Sous-ajustement, classification trop simpliste
+
+. . .
+
+Conséquence → Perte de capacité de généralisation à de nouvelles données.
+
+. . .
+
+Solution → Élagage (*pruning*)
+
 
 ## Élagage de l'arbre
 
-::: {.fragment}
-**Stratégie en deux temps:**
-1. **Croissance complète** jusqu'aux feuilles pures
-2. **Élagage** des branches peu performantes
-:::
+<br>
 
-::: {.fragment}
-**Critère coût-complexité**
+Stratégie en deux temps :
+
+1. Croissance complète jusqu'aux feuilles pures
+
+2. Élagage des branches peu performantes
+
+. . .
+
+
+Critère coût-complexité :
+
 $$\sum_{j=1}^{|T|} c_j + \alpha |T|$$
 
-où:
-- $|T|$ : nombre de feuilles
-- $c_j$ : coût dans la feuille $j$
-- $\alpha$ : paramètre de régularisation
-:::
+où $|T|$ est le nombre de feuilles, $c_j$ est le coût dans la feuille $j$ et $\alpha$ est un paramètre de régularisation.
+
 
 ## Choix du paramètre α
 
-::: {.fragment}
-**Interprétation**
-- $\alpha$ élevé → Favorise les arbres simples
-- $\alpha$ faible → Arbres plus complexes
-:::
+<br>
 
-::: {.fragment}
-**Méthode de sélection**
-Validation croisée pour comparer les performances sur différentes valeurs de $\alpha$
-:::
+Interprétation
+
+- $\alpha$ élevé → Favorise les arbres simples
+
+- $\alpha$ faible → Arbres plus complexes
+
+. . .
+
+Méthode de sélection → Validation croisée pour comparer les performances sur différentes valeurs de $\alpha$
+
 
 ## Avantages des arbres
 
-::: {.incremental}
-- **Très interprétables** : Chemin explicite pour chaque prédiction
-- **Robustes** aux valeurs extrêmes et transformations monotones
-- **Gestion naturelle** des interactions entre variables
-- **Variables mixtes** : Quantitatives et qualitatives
-- **Aucune hypothèse** sur la distribution des données
-- **Sélection automatique** des variables importantes
-- **Base** de méthodes modernes (forêts aléatoires, boosting)
-:::
+<br>
+
+Très interprétables : Chemin explicite pour chaque prédiction.
+
+. . .
+
+Robustes aux valeurs extrêmes et transformations monotones.
+
+. . .
+
+Gestion naturelle des interactions entre variables.
+
+. . .
+
+Variables mixtes : Quantitatives et qualitatives.
+
+. . .
+
+Aucune hypothèse sur la distribution des données.
+
+. . .
+
+Sélection automatique des variables importantes.
+
+. . .
+
+Base des méthodes modernes (forêts aléatoires, boosting).
+
 
 ## Limites des arbres
 
-::: {.incremental}
-- **Instabilité** : Sensibles aux petites modifications des données
-- **Performance limitée** seuls, surtout avec données bruitées
-- **Divisions rectangulaires** inadaptées aux frontières non-linéaires
-- **Tendance au sur-ajustement** sans élagage
-- **Sensibilité** au déséquilibre des classes
-- **Solution** : Méthodes ensemblistes (forêts, boosting)
-:::
+<br>
 
-## Récapitulatif
+Instabilité : Sensibles aux petites modifications des données
 
-::: {.fragment}
-**Les arbres CART**
+. . .
+
+Performance limitée seuls, surtout avec données bruitées.
+
+. . .
+
+Divisions rectangulaires inadaptées aux frontières non-linéaires.
+
+. . .
+
+Tendance au sur-ajustement sans élagage.
+
+. . . 
+
+Sensibilité au déséquilibre des classes.
+
+. . .
+
+Solution : Méthodes ensemblistes (forêts, boosting).
+
+
+## Conclusion
+
+<br>
+
+Les arbres :
+
 - Méthode de partitionnement récursif
+
 - Algorithme glouton simple et intuitif
+
 - Nécessitent un élagage pour éviter le sur-ajustement
-:::
 
-::: {.fragment}
-**Usage recommandé**
-- Excellents pour l'interprétabilité
-- Meilleurs en combinaison (méthodes ensemblistes)
-- Première approche pour comprendre les données
-:::
 
-## Merci pour votre attention
+. . .
 
-**Questions ?**
-
-::: {.fragment}
-*Les arbres de décision : simplicité, interprétabilité et fondement des méthodes ensemblistes*
-:::
+Prochaine étape → Les modèles ensemblistes
